package org.lia;

public class Main {
    public static void main(String[] args) {
        SuperCalculator.printTable(-5, 5, 0.1, "table.csv");
    }
}